name:                jasper
version:             0.0.0
cabal-version:       >= 1.10
author:              Evan Sebastian
synopsis:            Java SE8 parser for syntax analysis purposes.
license:             MIT
maintainer:          evanlhoini@gmail.com
category:            Language
build-type:          Simple
cabal-version:       >=1.8

library
    hs-source-dirs:  src
    exposed-modules:
        Data.Misc
        Language.Java.Lexer.Internal
        Language.Java.Parser.Core
        Language.Java.Parser.Basic
        Language.Java.Lexer
        Language.Java.Parser
        Language.Java.AST
    ghc-options:     -O4 -Wall -fno-warn-unused-do-bind -fno-warn-missing-signatures
    build-depends: base >=4 && < 5
                ,  containers
                ,  text
                ,  unordered-containers
                ,  mtl
                ,  parsec

test-suite jasper-test-suite
    type:           exitcode-stdio-1.0
    hs-source-dirs: test
    main-is:        Spec.hs
    build-depends:  base >=4 && < 5
                 ,  hspec
                 ,  parsec
                 ,  jasper

executable jasper
    main-is:             src/Main.hs
    default-language:    Haskell2010
    build-depends:       base >=4 && < 5
                      ,  parsec
                      ,  jasper
